--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "seeds": "node seeds/index.js"
   },
   "repository": {
     "type": "git",
@@ -19,11 +20,8 @@
   },
   "homepage": "https://github.com/alysonorta/drop-it-like-its-shop#readme",
   "dependencies": {
-
     "bcrypt": "^5.0.1",
-
     "connect-session-sequelize": "^7.1.1",
-
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.3",
